# Spotigator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Song.h  main.cpp
src/: CountryTable.cpp  CountryTable.h  RBtree.cpp  RBtree.h  SFMLHelper.cpp  SFMLHelper.h  Song.cpp  Song.h  main.cpp
test/: test.cpp
